updated pom file to run features in parallel